cg_cfg/OpenSSL/7f0a8dc/bug_trace/traces/bug_78.txt
/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/cfb64enc.c:34: error: DEAD_STORE
  The value written to &iv (type unsigned char*) is never used.
Showing all 1 steps of the trace


/gpfs/automountdir/r92gpfs02/zhengyu/work/ai4code/benchmarks/openssl/src/crypto/des/cfb64enc.c:34:17: Write of unused value
32.                   c2l(iv, v0);
33.                   ti[0] = v0;
34.                   c2l(iv, v1);
                      ^
35.                   ti[1] = v1;
36.                   DES_encrypt1(ti, schedule, DES_ENCRYPT);
